crates/acorn-lib/src/io/api/tests/snapshots/acorn__io__api__tests__endpoint_context.snap
---
source: crates/acorn-lib/src/io/api/tests/mod.rs
expression: json
---
{
  "base": "https://example.org/v3.0",
  "one": "two",
  "query": "?q=affiliation-org-name:Lyrasis+AND+ror-org-id:%22https%3A%2F%2Fror.org%2F01qz5mb56%22",
  "three": "four"
}
