crates/acorn-lib/src/io/api/tests/snapshots/acorn__io__api__tests__orcid_status_response.snap
---
source: crates/acorn-lib/src/io/api/tests/mod.rs
expression: "format!(\"{:#?}\", response)"
---
StatusResponse {
    application: true,
    database: true,
    database_readonly: false,
    overall: true,
}
